[8.9] Print Update + Redacteur

--- a/resources/ObjectInternal/DF_Commande/DF_ARC_HTML.html
+++ b/resources/ObjectInternal/DF_Commande/DF_ARC_HTML.html
@@ -292,7 +292,7 @@
 				<tr>
 
 					<td class="type">{{defiLigneCommandeTypeGeologique}}</td>
-					<td class="designation">defiLigneCommandeDesignation</td>
+					<td class="designation">{{defiLigneCommandeDesignation}}</td>
 					<td class="unite">{{defiLigneCommandeUnite}}</td>
 					<td class="quantite">{{defiLigneCommandeQuantite}}</td>
 					<td class="prixu">{{defiLigneCommandePrixEXWUnitaire}}&nbsp;€</td>
