--- a/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
+++ b/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
@@ -339,11 +339,11 @@
 							<!--<strong>1ère livraison le {{defiDevisDelaisPrevisionnel}} si commande avant {{defiDevisDateValiditeOffre}}</strong></li>-->
 							<li>Cadence de livraison maximale hebdomadaire : <strong>{{defiDevisCadenceLivraison}}</strong></li>
 							<li>Facturation : <strong>Entreprise De Filippis</strong></li>
-							<li>Prix valable pour camion complet 24 tonnes</strong></li>
+							<li>Prix valable pour <strong> camion complet 24 tonnes</strong></li>
 							<li>Acompte: <strong>{{defiDevisAccompte}}</strong></li>
 							<li>Paiement: <strong>{{defiDevisDelaiPaiement}}</strong></li>
 							<li>Validité de l'offre : <strong>{{defiDevisDateValiditeOffre}}</strong></li>
-							<li>COndition de mise à disposition :Prix Rendu Unitaire Non déchargé</li>
+							<li>Condition de mise à disposition : <strong>{{defiDevisIncotermPrix}}</strong></li>
 						</ul>
 					</td>
 					<td class="totallibelle">
