--- a/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
@@ -321,7 +321,7 @@
 			
 		</table>
 		<br/>
-	<table class="signature">
+	<!--<table class="signature">
 		<tr>
 			<td>
 				<span class="signature_span">VISA DE LA COMPTABILITE </span>
@@ -336,7 +336,7 @@
 				<span class="signature_span">NOM DU CONDUCTEUR DE TRAVAUX ET VISA</span>
 			</td>
 		</tr>	
-	</table>
+	</table>-->
 	
 	
  </div>
