--- a/resources/ObjectInternal/DF_Livraison/DF_BL_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_BL_HTML.html
@@ -56,7 +56,7 @@
 		border-spacing:0px !important;
 	}
 	.tg td {
-		padding:5px 5px;
+		padding:10px 7px !important;
 		border-style:solid;
 		border-width:1px !important;
 		overflow:hidden;
@@ -218,6 +218,19 @@
 	}
 	
 	</style>	
+	<script>
+		function fPrix(nombre){
+		  nombre += '';
+		  var sep = '&nbsp;';
+		  var reg = /(\d+)(\d{3})/;
+		  while( reg.test( nombre)) {
+			nombre = nombre.replace( reg, '$1' +sep +'$2');
+		  }
+		  /*return nombre;*/
+		  document.write(nombre+"&nbsp;&euro;");
+		}
+	</script>	
+	
 </head>
 
 <body>
@@ -278,7 +291,7 @@
 			
          <table class="tg">
 			<thead>
-				<tr style="background-color:#33DAFF">
+				<tr style="background-color:#004C8E">
 					<th class="tg-ul38 thref">Ref</th>
 				    <th class="tg-ul38 thtype">Type de pierre</th>
 				    <th class="tg-ul38 thdesignation">Désignation</th>
@@ -309,8 +322,11 @@
 		<p>
 			<br/>
 				<strong>Poids Total : {{df_livraison_quantite_chargee}} Tonnes</strong>
+			<br/>
+				<strong>Nombre de palettes : {{defiLivraisonNbrPalettes}}</strong>
 			<br/><br/>
 		</p>
+		<p>&nbsp;</p>
 	</div>
 	{{/rows}}
 	
