[10.6] Enum Values Fix

--- a/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
+++ b/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
@@ -353,11 +353,11 @@
 							<!--<strong>1ère livraison le {{defiDevisDelaisPrevisionnel}} si commande avant {{defiDevisDateValiditeOffre}}</strong></li>-->
 							<li>Cadence de livraison maximale hebdomadaire : <strong>{{defiDevisCadenceLivraison}}</strong></li>
 							<li>Facturation : <strong>Entreprise De Filippis</strong></li>
-							<li>Prix valable pour <strong> camion complet 24 tonnes</strong></li>
-							<li>Acompte: <strong>{{defiDevisAccompte}}</strong></li>
-							<li>Paiement: <strong>{{defiDevisDelaiPaiement}}</strong></li>
+							<li>Prix valable pour <strong> {{#contenance}}({{contenance_l}}){{/contenance}}</strong></li>
+							<li>Acompte: <strong>{{#accompte}}({{accompte_l}}){{/accompte}}</strong></li>
+							<li>Paiement: <strong>{{#paiement}}({{paiement_l}}){{/paiement}}</strong></li>
 							<li>Validité de l'offre : <strong>{{defiDevisDateValiditeOffre}}</strong></li>
-							<li>Condition de mise à disposition : <strong>{{defiDevisIncotermPrix}}</strong></li>
+							<li>Condition de mise à disposition : <strong>{{#pack_transp}}({{pack_transp_l}}){{/pack_transp}}</strong></li>
 						</ul>
 					</td>
 					<td class="totallibelle">
