--- a/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
@@ -293,7 +293,7 @@
 					<td class="unite">{{DF_Quantite_DF_ligne_commande_id__defiLigneCommandeUnite}}</td>
 					<td class="quantite">{{defiQuantiteQte}}</td>
 					<td class="prixu">{{DF_Quantite_DF_ligne_commande_id__defiLigneCommandePrixEXWUnitaire}}&nbsp;€</td>
-					<td class="prixt">0&nbsp;€</td>
+					<td class="prixt">{{#montant}}{{montant_l}}{{/montant}} €</td>
 				</tr>
 				{{/rows_l}}
 				
