[11.3] Fix FFT/Pierre Ligne Devis

--- a/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
+++ b/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
@@ -326,7 +326,7 @@
 				{{#rows_l}}
 				<tr>
 					<td class="ref">{{defiLigneDevisNPrix}}</td>
-					<td class="type">{{DF_Ligne_Devis_DF_Produit_Finis_id__defiPrdTypeGeologique}}</td>
+					<td class="type">{{defiLigneDevisTypeGeo}}</td>
 					<td class="designation">{{defiLigneDevisDesignation}}</td>
 					<td class="unite">{{defiLigneDevisUnite}}</td>
 					<td class="quantite">{{defiLigneDevisQuantite}}</td>
