--- a/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
@@ -147,6 +147,27 @@
 		text-align:right;
 		font-weight:bold;
 	}	
+	
+	tfoot td.totalttclibelle{
+		background-color:#fff;
+		text-align:left;
+		font-weight:bold;	
+	}
+	tfoot td.totalttcvaleur {
+		background-color:#fff;
+		text-align:right;
+		font-weight:bold;
+	}
+	tfoot td.tvalibelle{
+		background-color:#fff;
+		text-align:left;
+		font-weight:bold;
+	}
+	tfoot td.tvavaleur {
+		background-color:#fff;
+		text-align:right;
+		font-weight:bold;
+	}
 
 	tfoot ul {		
 		margin: 0 15px;
