[12.9] Update for dev env

--- a/resources/ObjectInternal/DF_Livraison/DF_BL_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_BL_HTML.html
@@ -223,6 +223,7 @@
 	</style>	
 	<script>
 		function fPrix(nombre){
+		  nombre = nombre.toFixed(2);		
 		  nombre += '';
 		  var sep = '&nbsp;';
 		  var reg = /(\d+)(\d{3})/;
