--- a/resources/ObjectInternal/DF_Commande/DF_ARC_HTML.html
+++ b/resources/ObjectInternal/DF_Commande/DF_ARC_HTML.html
@@ -231,6 +231,7 @@
 	</style>	
 	<script>
 		function fPrix(nombre){
+		  nombre = nombre.toFixed(2);		  
 		  nombre += '';
 		  var sep = '&nbsp;';
 		  var reg = /(\d+)(\d{3})/;
