--- a/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
+++ b/resources/ObjectInternal/DF_Devis/DF_Devis_HTML.html
@@ -247,6 +247,7 @@
 	
 	<script>
 		function fPrix(nombre){
+		  nombre = nombre.toFixed(2);		  
 		  nombre += '';
 		  var sep = '&nbsp;';
 		  var reg = /(\d+)(\d{3})/;
