[15.2] Status Livraison Config

--- a/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
@@ -309,7 +309,7 @@
 									<strong>Email </strong>: {{#cl}}{{DF_Commande_DF_Contact_id__defiContactEmail}}{{/cl}}<br/>	
 								</div>
 								<br/>
-								<strong>N° BL associé(s)<strong> : {{#bl}} {{defiLivraisonId}}, {{/bl}}<br/>
+								<strong>N° BL associé(s)<strong> : {{#bl}} {{defiLivraisonNumBL}}, {{/bl}}<br/>
 								<strong>N° OTP : {{#cl}}{{defiCommandeNumero}}{{/cl}}
 								<br/>
                             </td>                            
