--- a/resources/ObjectInternal/DF_Livraison/DF_BL_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_BL_HTML.html
@@ -302,7 +302,7 @@
 						<tr>
 							<td colspan="2" style="vertical-align:bottom;text-align:center">
 								<h1>{{#rows_commande}}{{DF_Commande_DF_Affaire_id__defiAfrLibelleChantier}} - {{DF_Commande_DF_Affaire_id__defiAfrLieuAffaire}}{{/rows_commande}}</h1>
-								<h2>BON DE LIVRAISON N° <strong>{{defiLivraisonId}}</strong></h2>
+								<h2>BON DE LIVRAISON N° <strong>{{defiLivraisonNumBL}}</strong></h2>
 								<!--<h2>À nous retourner dûment accepté et signé. Merci.</h2>-->
 							</td>
 						</tr>
