[16.3] ODF+LD+EMAIL

--- a/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
+++ b/resources/ObjectInternal/DF_Livraison/DF_ODF_HTML.html
@@ -346,7 +346,7 @@
 			<tbody>
 				{{#rows_l}}
 				<tr>
-					<td class="ref">BL</td> <!-- DF_Quantite_DF_Livraison_id__defiLivraisonNumBL -->
+					<td class="ref">{{DF_Quantite_DF_Livraison_id__defiLivraisonNumBL}}</td> <!-- DF_Quantite_DF_Livraison_id__defiLivraisonNumBL -->
 					<td class="ref">{{defiQuantiteRefProduit}}</td>
 					<td class="designation">{{DF_Quantite_DF_ligne_commande_id__defiLigneCommandeDesignation}}</td>
 					<td class="unite">{{DF_Quantite_DF_ligne_commande_id__defiLigneCommandeUnite}}</td>
