--- a/resources/ObjectInternal/DF_Commande/DF_ARC_HTML.html
+++ b/resources/ObjectInternal/DF_Commande/DF_ARC_HTML.html
@@ -139,7 +139,7 @@
 
 	tfoot td.totallibelle, tfoot td.totallibelletva, tfoot td.totallibellettc {
 		background-color:#A6C4E0;
-		text-align:left;
+		text-align:right;
 		font-weight:bold;
 	}
 	tfoot td.totalvaleur, tfoot td.totalvaleurtva, tfoot td.totalvaleurttc {
@@ -401,7 +401,7 @@
 			<br/>
 			<span class="1234">Nombre de camions :</span> {{defiCommandeNombreCamions}}
 			<br/>
-			<span class="1234">Adresse de livraisson :</span>  {{defiCommandeAdresseLivraison}}
+			<span class="1234">Adresse de livraison :</span>  {{defiCommandeAdresseLivraison}}
 			
 		</p>
 	</div>
